--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -10,6 +10,8 @@
     <input name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
+    <label for="Datedenaissance">Datedenaissance</label>
+    <input type="Datedenaissance" name="Datedenaissance" id="Datedenaissance" required>
     <input type="submit" value="Register">
   </form>
 {% endblock %}
