--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -6,12 +6,16 @@
 
 {% block content %}
   <form method="post">
-    <label for="username">Username</label>
+    <label for="username">Adresse mail</label>
     <input name="username" id="username" required>
-    <label for="password">Password</label>
+    <label for="password">Mot-de-passe</label>
     <input type="password" name="password" id="password" required>
-    <label for="Datedenaissance">Datedenaissance</label>
+    <label for="Datedenaissance">Date de naissance</label>
     <input type="Datedenaissance" name="Datedenaissance" id="Datedenaissance" required>
+    <label for="Nom">Nom</label>
+    <input type="Nom" name="Nom" id="Nom" required>
+    <label for="Prenom">Prénom</label>
+    <input type="Prenom" name="Prenom" id="Prenom" required>
     <input type="submit" value="Register">
   </form>
 {% endblock %}
