--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -10,6 +10,6 @@
     <input name="username" id="username" required>
     <label for="password">Mot-de-passe</label>
     <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
+    <input type="submit" class="btn" value="Log In">
   </form>
 {% endblock %}
