--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
 
-{% block header %}
-  <h1>{% block title %}Bienvenue{% endblock %}</h1>
-{% endblock %}
 
-{% block content%}
-    <p>Ceci est un paragraphe de bienvenue.</p>
+{% block content %}
+  <div class="welcome-box">
+    <p>Bienvenue sur votre gestionnaire d'investissement<br>Veuillez vous connecter.</p>
+  </div>
+
+
+  
+  <section class="button-box">
+    <a href="{{ url_for('auth.login') }}" class="btn">Se connecter</a>
+    <a href="{{ url_for('auth.register') }}" class="btn">S'enregistrer</a>
+  </section>
 {% endblock %}
