--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -11,32 +11,17 @@ h1 {
 }
 
 
-.button-box {
-    display: flex;
-    align-items: center;
-}
-
-.button-box ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.button-box li {
-    margin-right: 10px;
-}
-
 
 /* styles pour le titre MALLFUND */
 h1#mallfund-title {
-    margin: 10px 20px; /* marge */
+    margin: 20px 20px; /* marge */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* ombre au texte */
     font-family: 'Helvetica', sans-serif; /* police */
 }
 
 .welcome-box {
     max-width: 400px; /* largeur maximale du rectangle */
-    margin: 20px auto; /* Centre le rectangle */
+    margin: 50px auto; /* Centre le rectangle */
     padding: 20px; /* espace intérieur au rectangle */
     background-color: #fff; /* fond rectangle */
     border: 1px solid #ddd; /*bordure rectangle */
@@ -54,17 +39,18 @@ body {
 
 .button-box {
     max-width: 400px; /* largeur maximale de la section  */
-    margin: 20px auto; /* Centre section  */
+    margin: 30px auto; /* Centre section  */
     display: flex;
     align-items: center;
     text-align: center; /* Centre txt boutons  */
+    justify-content: space-between;
 }
 
 /* styles boutons */
 .btn {
     display: inline-block; /* essaie pour les aligner */
     margin: 0 10px; /* espace les boutons */
-    padding: 10px; /* marge interne aux boutons */
+    padding: 20px; /* marge interne aux boutons */
     background-color: #333; /* Couleur de fond */
     color: #fff; /* Couleur du texte */
     border: none; /* Supprime les bords des boutons */
@@ -86,7 +72,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin-top: 20px;
+    
 }
 
 .button-box2 ul {
