--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -101,3 +101,92 @@ body {
     background-color: #eee;
 }
 
+
+.display-box {
+    max-width: 300px; /* largeur maximale du rectangle */
+    margin: 50px auto; /* Centre le rectangle */
+    padding: 20px; /* espace intérieur au rectangle */
+    background-color: #fff; /* fond rectangle */
+    border: 1px solid #ddd; /*bordure rectangle */
+    border-radius: 10px; /* Arrondi les angles */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /*  ombre au rectangle */
+    text-align: center; /*centre le etxt*/
+}
+
+
+.side-menu {
+    max-width: 200px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 10px;
+    position: fixed;
+    top: 150px;
+    left: 30px;
+    background-color: #333;
+    color: white;
+    border: 1px solid #ddd; /* Bordure du side menu */
+    border-radius: 10px; /* Arrondi les angles du side menu */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Ajoute une ombre légère au side menu */
+    display: flex; /* Affiche les éléments en tant que flex container */
+    flex-direction: column; /* Empile les éléments verticalement */
+    align-items: flex-start; /* Aligne les éléments à gauche */
+}
+
+.side-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.side-menu a {
+    text-decoration: none;
+    color: white;
+    padding: 15px 10px;
+
+}
+
+.side-menu a:hover {
+    background-color: #555;
+}
+
+.button-boxside {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    
+}
+
+.button-boxside ul {
+    list-style: none;
+    padding: 5px;
+    margin: 5px;
+    /*display: flex;  aligne ? */
+}
+
+.button-boxside li {
+    margin-right: 10px;
+    display: block;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+/* style btn2 */
+.btnside {
+    padding: 15px 15px;
+    border: 1px solid #333;
+    border-radius: 4px;
+    color: #333;
+    background-color: #fff;
+    font-family: 'Helvetica', sans-serif;
+}
+
+.btnside:hover {
+    background-color: #eee;
+}
+
+
+.content {
+    margin-left: 250px; /* Ajustez la marge gauche pour laisser de la place au menu */
+    padding: 20px;
+}
