--- a/app/templates/Add_Ac/NewAc.html
+++ b/app/templates/Add_Ac/NewAc.html
@@ -1,10 +1,14 @@
+{% extends 'base.html' %}
+
 <html lang="en">
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ajouter une Action</title>
     <!-- Ajoutez ici vos liens vers les fichiers CSS et autres scripts si nécessaire -->
 </head>
+
 <body>
     <h1>Ajouter une Action</h1>
 
@@ -53,4 +57,5 @@
         }
     </script>
 </body>
+{% endblock %}
 </html
